--- a/style.css
+++ b/style.css
@@ -1,9 +1,18 @@
-h1 {
+h1, h3 {
   margin-left: 10px;
+}
+
+h1 {
+  color: #55ACEE;
 }
 
 a {
   text-decoration: none;
+  color: #55ACEE;
+}
+
+a:visited {
+  color: #66757F;
 }
 
 .timeline {
@@ -30,4 +39,9 @@ a {
 
 .btn {
   margin: 10px;
+}
+
+#refresh {
+  width: 100px;
+  height: 30px;
 }
